<resources>
    <string name="app_name">Android registration form homework</string>
    <string name="email">Email</string>
    <string name="required">Required</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="re_enter_password">re-enter password</string>
    <string name="register">Register</string>
</resources>